# Bumblebee

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README.markdown  autogen.sh  bbcommon.c  bbcommon.h  bbconfig.c  bbglobals.h  bblogger.c  bblogger.h  bbrun.c  bbrun.h  bbsocket.c  bbsocket.h  bbswitch.c  bbswitch.h  bumblebee.conf  bumblebeed.c  configure.ac  daemon.notes  optirun  optirun.c  quickinstall.bash  quickinstall_wild.bash  version.sh
bbswitch/: bbswitch.c
conf/: 99-bumblebee-nvidia-dev.rules  99-remove-nvidia-dev.rules  bumblebee-nouveau.conf  bumblebee-nvidia.conf  bumblebee.conf  bumblebee.conf.in  xorg.conf.fglrx  xorg.conf.nouveau  xorg.conf.nvidia  xorg.conf.radeon
conf/dbus/: bumblebeed.conf.in
conf/xorg.conf.d/: 10-dummy.conf  10-ignore-devices.conf  busid.conf
doc/: RELEASE_NOTES_3_0  RELEASE_NOTES_3_0_1  RELEASE_NOTES_3_1  RELEASE_NOTES_3_2  RELEASE_NOTES_3_2_1
scripts/: .bumblebee.swp  bumblebee-bugreport.in  bumblebee.bash.in  bumblebeed.service  bumblebeed.service.in
scripts/bash_completion/: bumblebee  optirun
scripts/systemd/: bumblebeed.service.in  bumblebeed_wild.service.in
scripts/sysvinit/: bumblebeed.in
scripts/upstart/: bumblebeed.conf.in
src/: .gitignore  Makefile.am  bbconfig.c  bbconfig.h  bbglobals.c  bbglobals.h  bblogger.c  bblogger.h  bbrun.c  bbrun.h  bbsecondary.c  bbsecondary.h  bbsocket.c  bbsocket.h  bbsocketclient.c  bbsocketclient.h  bbswitch.c  bbswitch.h  bumblebeed.c  bumblebeed.h  connections-handler.c  connections-handler.h  driver.c  driver.h  findpathwild.c  findpathwild.h  module.c  module.h  optirun.c  pci.c  pci.h
src/dbus/: bumblebeed.xml  dbus.h  server.c
src/switch/: sw_bbswitch.c  sw_nouveau.c  sw_switcheroo.c  switching.c  switching.h
test/: bumblebee.conf
